[metadata]
name = runrest
version = 0.0.1
description = A wrapper for running REST, a reinforcement learning framework for constructing rectilinear Steiner Minimum tree (RSMT)
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    matplotlib
    torch
    numpy
include_package_data = True
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    runrest = runrest.app:main